<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WP</string>
    <string name="action_add">Add Location</string>
    <string name="hello_world">Weather\nPortal</string>
    <string name="title_activity_main"> WP</string>
    <string name="welcome">Welcome to\nWeather \nPortal</string>
    <string name="enter">Enter Location</string>
    <string name="btn1">Go</string>
    <string name="title_activity_view">WP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_frag">WP</string>
    <string name="forecast">Forecast</string>
    <string name="tv1">Sun Rise</string>
    <string name="tv2">Sun Down</string>
    <string name="tv3">Feels Like</string>
    <string name="tv4">Visibility</string>
    <string name="tv5">Humidity</string>
    <string name="tv6">UV Index</string>
    <string name="title_activity_search">WP</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete Location</string>
    <string name="action_select">Select Location</string>
    <string name="title_activity_select">WP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_delete">WP</string>
    <string name="spinner_title">Select Category</string>
    <string name="title_activity_data">WP</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_v">WP</string>
    <string name="go">Go</string>
    <string name="title_activity_webdata">Webdata</string>

</resources>
