<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3539"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignRight="@+id/tv"
        android:layout_alignTop="@+id/editText1"
        android:background="@drawable/bs"
        android:fontFamily="sans-serif-light"
        android:onClick="go"
        android:text="@string/go"
        android:textColor="#fff"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv"
        android:layout_below="@+id/tv"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/main"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:textColor="#ffffff"
        android:hint="@string/enter"
        android:textSize="24sp" />

</RelativeLayout>