<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3539"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context=".DetailFragment" >

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2c3539"
        android:gravity="top" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2c3539"
            android:gravity="left" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Place"
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignRight="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="@string/tv2"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView12"
                android:layout_below="@+id/textView12"
                android:layout_marginBottom="2dp"
                android:layout_toLeftOf="@+id/ch"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="@string/tv3"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView11"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignLeft="@+id/sd"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="TextView"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignRight="@+id/textView9"
                android:layout_below="@+id/textView11"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="@string/tv4"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/vis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView14"
                android:layout_alignBottom="@+id/textView14"
                android:layout_alignLeft="@+id/ch"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="TextView"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/sr"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sr"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="TextView"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignRight="@+id/textView9"
                android:layout_below="@+id/textView14"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="@string/tv5"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sr"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView7"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="TextView"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_alignBaseline="@+id/textView16"
                android:layout_alignBottom="@+id/textView16"
                android:layout_alignLeft="@+id/ch"
                android:layout_alignParentRight="true"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="TextView"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/sr"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:text="@string/tv1"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignBottom="@+id/textView16"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/textView9"
                android:layout_toLeftOf="@+id/textView12"
                android:background="@color/transparent_black_percent_50"
                android:src="@drawable/download" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="31dp"
                android:background="@color/transparent_black_percent_50"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="2dp"
                android:text="Details"
                android:textColor="#fff"
                android:textSize="26sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/transparent_black_percent_50"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="Wind and Pressure"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView6"
            android:background="@color/transparent_black_percent_50"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/rotor1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/index" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="12dp"
                android:layout_height="69dp"
                android:layout_alignLeft="@+id/rotor1"
                android:layout_alignTop="@+id/rotor1"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/index11" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="7dp"
                android:layout_height="46dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="45dp"
                android:src="@drawable/index12" />

            <ImageView
                android:id="@+id/rotor2"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="27dp"
                android:src="@drawable/index1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:text="Wind"
                 />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/rotor1"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/rotor2"
                android:src="@drawable/download" />

            <TextView
                android:id="@+id/wi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:fontFamily="sans-serif-light"
                android:text="TextView"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView4"
                android:layout_toRightOf="@+id/wi"
                android:fontFamily="sans-serif-light"
                android:text="Barometer"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:fontFamily="sans-serif-light"
                android:text="TextView"
                android:textColor="#fff" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
